--- a/index.html
+++ b/index.html
@@ -211,6 +211,35 @@
           <!-- /.post-footer -->
         </section>
       </main>
+
+      <form action="#" class="add-post">
+        <input
+          type="text"
+          name="title"
+          class="add-title"
+          placeholder="Заголовок поста"
+        />
+        <textarea
+          name="text"
+          id="text"
+          class="add-text"
+          placeholder="Текст вашего поста"
+        ></textarea>
+        <input
+          type="text"
+          name="tags"
+          class="add-tags"
+          placeholder="Добавте теги через запятую"
+        />
+        <div class="add-buttons">
+          <button type="submit" class="button add-button">
+            <svg class="icon icon-fire">
+              <use xlink:href="img/icons.svg#fire"></use>
+            </svg>
+            Опубликовать пост
+          </button>
+        </div>
+      </form>
       <!-- /.posts -->
       <aside class="sidebar">
         <div class="login">
